<resources>
    <string name="app_name">video_downloader_xxx</string>

    <string name="id_develop" translatable="false">TeH Software</string>
    <string name="link_policy" translatable="false">https://sites.google.com/view/halloween-call-monster-villain</string>
    <string name="email_feedback" translatable="false">cuong.sdvl@gmail.com</string>

    <!--Dialog Permission-->
    <string name="txt_allow">Allow</string>
    <string name="txt_content">Allow Fullscreen Permissions \nFor Better Experience</string>

    <!--Menu Bottom Navigation Bar-->
    <string name="txt_browser">Browser</string>
    <string name="txt_web">Web</string>
    <string name="txt_progress">Progress</string>
    <string name="txt_video">Video</string>
    <string name="txt_library">Library</string>

    <!--Browser Screen-->
    <string name="txt_how_to_download">How to Download</string>
    <string name="txt_video_download">Video Download</string>
    <string name="txt_search_or_type_url">Search or type url</string>
    <string name="txt_convert">Convert</string>
    <string name="txt_analyzing">Analyzing...</string>
    <string name="txt_analyzing_timeout">Analyze timeout</string>
    <string name="txt_download_videos_from">Download Videos From</string>
    <string name="txt_recently_used_website">Recently used website</string>
    <string name="txt_status_analyzing">Analyzing please wait a moment</string>

    <!--Web Screen-->
    <string name="txt_cancel">cancel</string>
    <string name="txt_go_back">go_back</string>
    <string name="txt_go_forward">go_forward</string>
    <string name="txt_menu">menu</string>

    <!--Rename Dialog-->
    <string name="txt_cancel_dialog">Cancel</string>
    <string name="txt_rename">Rename</string>

    <!--onboarding screen-->
    <string name="btn_title_1">Fast Video Download</string>
    <string name="btn_content_1">Just paste the link and you can download \nthe video quickly.</string>
    <string name="btn_title_2">Missile Loading Speed</string>
    <string name="btn_content_2">Unlimited bandwidth for lightning-fast \ndownload speeds</string>
    <string name="btn_title_3">Easy To Download</string>
    <string name="btn_content_3">Save videos instantly with just one tap</string>

    <!--progress screen-->
    <string name="txt_go_complete">Go to Complete</string>

    <!--how to download screen-->
    <string name="how_to_download_btn_title_1">Go to <font color="#000000"><b>Website</b></font></string>
    <string name="how_to_download_btn_title_2"><font color="#000000"><b>Play</b></font> the video</string>
    <string name="how_to_download_btn_title_3">Click the <font color="#000000"><b>download button</b></font></string>
    <string name="btn_next">Next</string>
    <string name="btn_got_it">Got it</string>

    <!--Invalid link screen-->
    <string name="txt_invalid_link">Invalid link, please try again</string>
    <string name="txt_so_sorry">So sorry</string>
    <string name="txt_cancel_1">Cancel</string>
    <string name="txt_agree">Agree</string>
    <string name="txt_so_long_time">Analysis took too long, please try again.</string>
    <string name="txt_fetch_fail">Failed to fetch video data. Check the link and try again.</string>

    <!--Bottom sheet task added screen-->
    <string name="txt_task_added">Task added</string>
    <string name="txt_view">View</string>

    <!--Dialog rename screen-->
    <string name="txt_rename_1">Rename</string>
    <string name="txt_cancel_2">Cancel</string>

    <!--Dialog destroy download screen-->
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_content_1">This action cannot be undone. Do you want to continue?</string>

    <!--Dialog clear history screen-->
    <string name="txt_title_clear_history">Clear history</string>
    <string name="txt_content_clear_history">Would you like to clear all browser history?</string>
    <string name="txt_title_clear_bookmark">Clear bookmarks</string>
    <string name="txt_content_clear_bookmark">Would you like to clear all browser bookmarks?</string>


    <!--Bookmark screen-->
    <string name="txt_content_bookmark">Bookmark added successfully.</string>

    <!--Dialog notification screen-->
    <string name="txt_title_notification">Notification</string>

    <!--Settings screen-->
    <string name="settings">Settings</string>
    <string name="txt_title_1_setting">Download</string>
    <string name="txt_context_1_setting">Download with Wi-Fi Only</string>
    <string name="txt_title_2_setting">Browser</string>
    <string name="txt_context_2_setting">Clear cache</string>
    <string name="txt_context_2_1_setting">Clear browser history</string>
    <string name="txt_title_3_setting">General Settings</string>
    <string name="txt_context_3_setting">Language</string>
    <string name="txt_title_4_setting">Help</string>
    <string name="txt_context_4_setting">Feedback</string>
    <string name="txt_context_4_1_setting">Privacy policy</string>
    <string name="txt_context_4_2_setting">Share with friends</string>

    <!--Preference Util-->
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>

</resources>