<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="24dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_browser_recycle"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_title_clear_history"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/txt_content_clear_history"
        android:textColor="#404040"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:paddingVertical="8dp"
            android:background="@drawable/bg_paste_off"
            android:text="@string/txt_yes"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:paddingVertical="8dp"
            android:text="@string/txt_no"
            android:background="@drawable/bg_paste_on"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
