<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/powder_blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:elevation="1dp"
            android:paddingVertical="14dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="10dp"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_back" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/shadow_bottom" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHowToDownload"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_browser_text_how_to_download"
        android:gravity="center"
        android:text="@string/txt_how_to_download"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:translationZ="4dp"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_browser_how_to_down"
        app:iconGravity="textStart"
        app:iconTint="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:paddingHorizontal="16dp"
        android:text="@string/txt_title_1_setting"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_browser_recycle"
        android:gravity="center_vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgWifi"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            app:srcCompat="@drawable/ic_wifi" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/txt_context_1_setting"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btnSwitchWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="14dp"
            android:checked="true"
            android:textStyle="bold"
            android:thumb="@drawable/switch_thumb"
            app:track="@drawable/switch_track" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:paddingHorizontal="16dp"
        android:text="@string/txt_title_2_setting"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_browser_recycle"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:visibility="gone">

        <TableRow
            android:id="@+id/btnCleanCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgClear1"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/ic_clean" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/txt_context_2_setting"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/btnCleanHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgClear2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/ic_clean" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/txt_context_2_1_setting"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:paddingHorizontal="16dp"
        android:text="@string/txt_title_3_setting"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_browser_recycle"
        android:gravity="center_vertical"
        android:paddingVertical="16dp"
        android:visibility="gone">

        <TableRow
            android:id="@+id/btnLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLanguage"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/ic_language" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/txt_context_3_setting"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:paddingHorizontal="16dp"
        android:text="@string/txt_title_4_setting"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_browser_recycle"
        android:orientation="vertical"
        android:paddingVertical="16dp">

        <TableRow
            android:id="@+id/btnFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgFeedback"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/ic_feedback" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/txt_context_4_setting"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/btnPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPolicy"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/ic_policy" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/txt_context_4_1_setting"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgShare"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/ic_share_setting" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/txt_context_4_2_setting"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>